# spotify-playlist-generator

./: README.md  pyproject.toml  setup.cfg
src/spg/: spotify_playlist_generator.py
src/spotify_playlist_generator_100/: spotify_playlist_generator_100.py
src/spotify_playlist_generator_danielchukwu/: spotify_playlist_generator.py
