[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "spotify playlist generator 2"
version = "0.0.1"
authors = [
  { name="danielchukwu", email="00chukwudaniel@gmail.com" },
]
description = "A simple to use spotify playlist generator"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/danielchukwu/spotify-playlist-generator"
"Bug Tracker" = "https://github.com/danielchukwu/spotify-playlist-generator/issues"